# OX

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  spec_Telegram_Podcast_Digest.md
docs/superpowers/specs/: 2026-06-15-telegram-podcast-digest-design.md
src/tg_podcast_digest/: __init__.py  audio.py  cleanup.py  cli.py  config.py  models.py  notebooklm_client.py  pipeline.py  state.py  telegram_bot.py  telegram_source.py
tests/: test_audio.py  test_config.py  test_pipeline.py  test_state.py  test_telegram_bot.py  test_telegram_source.py
