[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-podcast-digest"
version = "0.1.0"
description = "Download Telegram audio, generate NotebookLM podcast digests, and send them back to Telegram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Telethon>=1.34.0",
    "requests>=2.31.0",
    "notebooklm-py @ git+https://github.com/teng-lin/notebooklm-py.git",
]

[project.scripts]
tg-podcast-digest = "tg_podcast_digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

